# CPPAlgorithms_Clion

./: .cproject  .gitignore  .project  CMakeLists.txt  main.cpp
2048/: CardData.cpp  CardData.h  Core2048.cpp  Core2048.h  LineIntent.cpp  LineIntent.h  Score.cpp  Score.h  TestClient.cpp  TestClient.h
CPPPrimer/: ArrayTest.cpp  ArrayTest.h  CPPAlgorithmTest.cpp  CPPAlgorithmTest.h  ClassTestDemo.cpp  ClassTestDemo.h  HasPtr.cpp  HasPtr.h  Point.cpp  Point.h  PointerTest.cpp  PointerTest.h  Screen.cpp  Screen.h  StrBlob.cpp  StrBlob.h  StringTest.cpp  StringTest.h
Util/: Log.cpp  Log.h  TimeUtil.cpp  TimeUtil.h
WordFinder/: WordFinder.cpp  WordFinder.h
XDown/: XDown.cpp  XDown.h
fragments/: Child.cpp  Child.h  Fragments.cpp  Fragments.h  Parent.cpp  Parent.h
